refactor: OrderRequest DTO 생성